--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "typings": "dist/src/index.d.ts",
-  "description": "Miscellaneous utilities for JavaScript/TypeScript",
-  "version": "0.0.3",
+  "description": "Miscellaneous utilities for JavaScript/TypeScript that I often use",
+  "version": "0.0.4",
   "scripts": {
     "build": "npm run clean && tsc && npm run copy",
     "build-watch": "tsc -w",
@@ -29,6 +29,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jasmine": "^3.3.5",
+    "@types/node": "^10.12.18",
     "jasmine": "^3.3.1",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2"
