--- a/misc-utils-of-mine-typescript/package.json
+++ b/misc-utils-of-mine-typescript/package.json
@@ -11,7 +11,7 @@
     "clean": "rm -rf dist docs api",
     "test": "npx tsd-check-runtime && jest --config ./jest.config-spec.js && npx tsd-check-runtime --clean",
     "test-watch": "npm test -- --watch",
-    "prettier": " npx prettier  --write --arrow-parens avoid --parser typescript --use-tabs false --no-semi true --single-quote true --tab-width 2 --trailing-comma all --end-of-line lf --prose-wrap preserve --print-width 120 --no-bracket-spacing  --jsx-bracket-same-line true \"src/**/*.ts*\"",
+    "prettier": " npx prettier  --write --arrow-parens avoid --parser typescript --use-tabs false --no-semi true --single-quote true --tab-width 2 --trailing-comma none --end-of-line lf --prose-wrap preserve --print-width 120  --jsx-bracket-same-line true \"src/**/*.ts*\"",
     "all": "npm run clean && npm run prettier && npm run build && npm run test && npm run docs && npx tsd-check-runtime --clean",
     "docs": "npx typedoc src/*.ts --theme markdown --out api",
     "prepare": "npm run build && npx tsd-check-runtime --clean"
@@ -23,7 +23,7 @@
     "prettier": "^1.16.4",
     "ts-jest": "^24.0.0",
     "ts-node": "^7.0.1",
-    "tsd-check-runtime": "0.0.9",
+    "tsd-check-runtime": "../../tsd-check-runtime/",
     "typedoc": "^0.13.0",
     "typedoc-plugin-markdown": "^1.1.27",
     "typescript": "^3.3.3333"
