--- a/misc-utils-of-mine-typescript/package.json
+++ b/misc-utils-of-mine-typescript/package.json
@@ -10,7 +10,7 @@
     "build-watch": "tsc -w",
     "clean": "rm -rf dist tmp",
     "test": "npm run build",
-    "all": "npm run clean && npm run build && npm run test-js && npm run test",
+    "all": "npm run clean && npm run build && npm run test",
     "prepare": "npm run all"
   },
   "keywords": [
@@ -30,8 +30,7 @@
     "@types/node": "^10.12.18",
     "jasmine": "^3.3.1",
     "ts-node": "^7.0.1",
-    "typescript": "^3.2.2"
+    "typescript": "^3.3.3"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
