--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "scripts": {
     "build": "npx yamat run npm run build",
     "clean": "npx yamat run npm run clean",
-    "cleanLock": "npx yamat run \"rm -rf package-lock.json\"",
+    "cleanPackageLock": "npx yamat run \"rm -rf package-lock.json\"",
     "test": "npx yamat run npm test",
     "all": "npm run clean && npm run build && npm test",
-    "yamat-link": "npx yamat link && npm run packageLock && npx yamat run npm i && npm run build && npm test",
-    "yamat-unlink-pack": "npm run packageLock && npx yamat run npm i && npx yamat unlink --version pack && npx yamat run \"rm -rf package-lock.json\" && npx yamat run npm i && npm test && npm test",
-    "yamat-patch-publish": "npx yamat run \"npm version patch\" && npx yamat unlink && npx yamat --break-on-error no run npm publish"
+    "yamat-link": "npx yamat link && npm run cleanPackageLock && npx yamat run npm i && npm run build && npm test",
+    "yamat-unlink-pack": "npx yamat unlink --version pack && npm run cleanPackageLock && npx yamat run npm i && npm test",
+    "yamat-patch-publish": "npx yamat run npm version patch && npx yamat unlink && npx yamat --break-on-error no run npm publish"
   },
   "keywords": [
     "JavaScript",
