--- a/misc-utils-of-mine-describe-it-expect/package.json
+++ b/misc-utils-of-mine-describe-it-expect/package.json
@@ -4,7 +4,7 @@
   "types": "dist/src/index.d.ts",
   "typings": "dist/src/index.d.ts",
   "description": "Utilities for test written with describe() it() expect() syntax (jest, jasmine, mocha, etc)",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "author": "Sebastián Gurin",
   "repository": {
     "type": "git",
@@ -29,7 +29,7 @@
     "typescript": "^3.2.2"
   },
   "dependencies": {
-    "misc-utils-of-mine-generic": "file:../misc-utils-of-mine-generic"
+    "misc-utils-of-mine-generic": "0.0.6"
   },
   "license": "MIT",
   "keywords": [
