--- a/misc-utils-of-mine-dom/package.json
+++ b/misc-utils-of-mine-dom/package.json
@@ -4,7 +4,7 @@
   "types": "dist/src/index.d.ts",
   "typings": "dist/src/index.d.ts",
   "description": "Miscellaneous utilities for JavaScript/TypeScript that I often use",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "scripts": {
     "build": "npx tsc",
     "build-watch": "npx tsc -w",
@@ -23,7 +23,7 @@
     "typescript": "^3.2.2"
   },
   "dependencies": {
-    "misc-utils-of-mine-generic": "file:../misc-utils-of-mine-generic"
+    "misc-utils-of-mine-generic": "0.0.6"
   },
   "author": "Sebastián Gurin",
   "repository": {
