--- a/misc-utils-of-mine-dom/package.json
+++ b/misc-utils-of-mine-dom/package.json
@@ -23,7 +23,7 @@
     "typescript": "^3.2.2"
   },
   "dependencies": {
-    "misc-utils-of-mine-generic": "0.0.6"
+    "misc-utils-of-mine-generic": "file:../misc-utils-of-mine-generic"
   },
   "author": "Sebastián Gurin",
   "repository": {
