--- a/misc-utils-of-mine-typescript/package.json
+++ b/misc-utils-of-mine-typescript/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "misc-utils-of-mine",
-  "main": "dist/src/index.js",
+  "name": "misc-utils-of-mine-typescript",
   "types": "dist/src/index.d.ts",
   "typings": "dist/src/index.d.ts",
-  "description": "Miscellaneous utilities for JavaScript/TypeScript that I often use",
-  "version": "0.0.6",
+  "description": "TypeScript type helpers and related misc utilities",
+  "version": "0.0.7",
   "scripts": {
     "build": "tsc ",
     "build-watch": "tsc -w",
