--- a/misc-utils-of-mine-dom/package.json
+++ b/misc-utils-of-mine-dom/package.json
@@ -23,7 +23,8 @@
     "typescript": "^3.2.2"
   },
   "dependencies": {
-    "misc-utils-of-mine-generic": "file:../misc-utils-of-mine-generic"
+    "misc-utils-of-mine-generic": "file:../misc-utils-of-mine-generic",
+    "misc-utils-of-mine-typescript": "file:../misc-utils-of-mine-typescript"
   },
   "author": "Sebastián Gurin",
   "repository": {
