--- a/misc-utils-of-mine-node/package.json
+++ b/misc-utils-of-mine-node/package.json
@@ -4,7 +4,7 @@
   "types": "dist/src/index.d.ts",
   "typings": "dist/src/index.d.ts",
   "description": "Miscellaneous utilities for JavaScript/TypeScript that I often use",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "scripts": {
     "build": "npm run clean && tsc && npm run copy",
     "build-watch": "tsc -w",
@@ -35,6 +35,6 @@
     "typescript": "^3.3.3"
   },
   "dependencies": {
-    "misc-utils-of-mine-generic": "file:../misc-utils-of-mine-generic"
+    "misc-utils-of-mine-generic": "0.0.8"
   }
 }
