--- a/misc-utils-of-mine-dom/package.json
+++ b/misc-utils-of-mine-dom/package.json
@@ -16,8 +16,8 @@
     "prepare": "npm run build && npx shx rm -rf dist/**/__tests__"
   },
   "dependencies": {
-    "misc-utils-of-mine-generic": "0.0.11",
-    "misc-utils-of-mine-typescript": "0.0.11"
+    "misc-utils-of-mine-generic": "file:../misc-utils-of-mine-generic",
+    "misc-utils-of-mine-typescript": "file:../misc-utils-of-mine-typescript"
   },
   "devDependencies": {
     "@types/jest": "^24.0.6",
