--- a/misc-utils-of-mine-generic/package.json
+++ b/misc-utils-of-mine-generic/package.json
@@ -24,7 +24,7 @@
     "typescript": "^3.2.2"
   },
   "dependencies": {
-    "misc-utils-of-mine-typescript": "0.0.11"
+    "misc-utils-of-mine-typescript": "file:../misc-utils-of-mine-typescript"
   },
   "keywords": [
     "JavaScript",
