--- a/misc-utils-of-mine-random-data/package.json
+++ b/misc-utils-of-mine-random-data/package.json
@@ -23,8 +23,7 @@
     "ts-jest": "^24.0.0",
     "typescript": "^3.2.2"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "keywords": [
     "JavaScript",
     "TypeScript",
