--- a/misc-utils-of-mine-typescript/package.json
+++ b/misc-utils-of-mine-typescript/package.json
@@ -1,10 +1,10 @@
 {
   "name": "misc-utils-of-mine-typescript",
+  "version": "0.0.11",
+  "description": "TypeScript type helpers and related misc utilities",
   "types": "dist/src/index.d.ts",
   "main": "dist/src/index.js",
   "typings": "dist/src/index.d.ts",
-  "description": "TypeScript type helpers and related misc utilities",
-  "version": "0.0.11",
   "scripts": {
     "build": "tsc ",
     "build-watch": "tsc -w",
@@ -13,6 +13,15 @@
     "all": "npm run clean && npm run build && npm run test",
     "prepare": "npm run build && npx shx rm -rf dist/**/__tests__"
   },
+  "devDependencies": {
+    "@types/jasmine": "^3.3.5",
+    "@types/node": "^10.12.18",
+    "jasmine": "^3.3.1",
+    "shx": "^0.3.2",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.3.3"
+  },
+  "dependencies": {},
   "keywords": [
     "JavaScript",
     "TypeScript",
@@ -24,14 +33,5 @@
     "type": "git",
     "url": "https://github.com/cancerberoSgx/misc-utils-of-mine.git"
   },
-  "license": "MIT",
-  "devDependencies": {
-    "@types/jasmine": "^3.3.5",
-    "@types/node": "^10.12.18",
-    "jasmine": "^3.3.1",
-    "shx": "^0.3.2",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.3.3"
-  },
-  "dependencies": {}
+  "license": "MIT"
 }
