--- a/misc-utils-of-mine-generic/package.json
+++ b/misc-utils-of-mine-generic/package.json
@@ -24,7 +24,8 @@
     "typescript": "^3.2.2"
   },
   "dependencies": {
-    "misc-utils-of-mine-typescript": "file:../misc-utils-of-mine-typescript"
+    "misc-utils-of-mine-typescript": "file:../misc-utils-of-mine-typescript",
+    "tsyringe": "^3.0.1"
   },
   "keywords": [
     "JavaScript",
