--- a/tsd-check-fail/package.json
+++ b/tsd-check-fail/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "misc-utils-of-mine-typescript",
-  "version": "0.0.11",
-  "description": "TypeScript type helpers and related misc utilities",
+  "name": "tsd-check-fail",
+  "version": "0.0.1",
+  "description": "like tsd-check but allows to check for false, this is a function like expectNotType(). Works by compiling given string and check for errors",
   "types": "dist/src/index.d.ts",
   "main": "dist/src/index.js",
   "typings": "dist/src/index.d.ts",
   "scripts": {
-    "build": "tsc ",
-    "build-watch": "tsc -w",
-    "clean": "rm -rf dist tmp",
-    "test": "npm run build",
+    "build": "tsc",
+    "build-watch": "tsc -w",   
+    "test": "jest --config ./jest.config-spec.js ",
+    "test-watch": "npm test -- --watch", 
     "all": "npm run clean && npm run build && npm run test",
     "prepare": "npm run build && npx shx rm -rf dist/**/__tests__"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.11",
     "@types/node": "^10.12.18",
-    "shx": "^0.3.2",
+    "jest": "^24.5.0",
+    "ts-jest": "^24.0.0",
     "ts-node": "^7.0.1",
-    "tsd-check": "^0.3.0",
+    "ts-simple-ast": "^21.0.4",
     "typescript": "^3.3.3"
   },
   "dependencies": {},
