--- a/tsd-check-fail/package.json
+++ b/tsd-check-fail/package.json
@@ -7,9 +7,10 @@
   "typings": "dist/src/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "build-watch": "tsc -w",   
+    "build-watch": "tsc -w",
     "test": "jest --config ./jest.config-spec.js ",
-    "test-watch": "npm test -- --watch", 
+    "test-watch": "npm test -- --watch",
+    "prettier": " npx prettier  --write --arrow-parens avoid --parser typescript --use-tabs false --no-semi true --single-quote true --tab-width 2 --trailing-comma all --end-of-line lf --prose-wrap preserve --print-width 120 --no-bracket-spacing  --jsx-bracket-same-line true \"src/**/*.ts*\"",
     "all": "npm run clean && npm run build && npm run test",
     "prepare": "npm run build && npx shx rm -rf dist/**/__tests__"
   },
@@ -17,15 +18,23 @@
     "@types/jest": "^24.0.11",
     "@types/node": "^10.12.18",
     "jest": "^24.5.0",
+    "prettier": "^1.16.4",
     "ts-jest": "^24.0.0",
     "ts-node": "^7.0.1",
     "ts-simple-ast": "^21.0.4",
     "typescript": "^3.3.3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "callsites": "^3.0.0"
+  },
   "keywords": [
     "JavaScript",
     "TypeScript",
+    "tsd",
+    "typescript declaration",
+    "tsd-check",
+    "types",
+    "typings",
     "utilities",
     "miscellaneous"
   ],
