--- a/tsd-check-fail/package.json
+++ b/tsd-check-fail/package.json
@@ -25,7 +25,8 @@
     "typescript": "^3.3.3"
   },
   "dependencies": {
-    "callsites": "^3.0.0"
+    "callsites": "^3.0.0",
+    "javascript-stringify": "^2.0.0"
   },
   "keywords": [
     "JavaScript",
