--- a/tsd-check-fail/package.json
+++ b/tsd-check-fail/package.json
@@ -11,7 +11,8 @@
     "test": "jest --config ./jest.config-spec.js ",
     "test-watch": "npm test -- --watch",
     "prettier": " npx prettier  --write --arrow-parens avoid --parser typescript --use-tabs false --no-semi true --single-quote true --tab-width 2 --trailing-comma all --end-of-line lf --prose-wrap preserve --print-width 120 --no-bracket-spacing  --jsx-bracket-same-line true \"src/**/*.ts*\"",
-    "all": "npm run clean && npm run build && npm run test",
+    "all": "npm run clean && npm run prettier && npm run build && npm run test",
+    "clean": "rm -rf dist docs",
     "prepare": "npm run build && npx shx rm -rf dist/**/__tests__"
   },
   "devDependencies": {
@@ -22,7 +23,7 @@
     "ts-jest": "^24.0.0",
     "ts-node": "^7.0.1",
     "ts-simple-ast": "^21.0.4",
-    "typescript": "^3.3.3"
+    "typescript": "^3.3.3333"
   },
   "dependencies": {
     "callsites": "^3.0.0",
