--- a/tsd-check-fail/package.json
+++ b/tsd-check-fail/package.json
@@ -11,9 +11,9 @@
     "test": "jest --config ./jest.config-spec.js ",
     "test-watch": "npm test -- --watch",
     "prettier": " npx prettier  --write --arrow-parens avoid --parser typescript --use-tabs false --no-semi true --single-quote true --tab-width 2 --trailing-comma all --end-of-line lf --prose-wrap preserve --print-width 120 --no-bracket-spacing  --jsx-bracket-same-line true \"src/**/*.ts*\"",
-    "all": "npm run clean && npm run prettier && npm run build && npm run test",
-    "docs": "npx typedoc src/toHave/types.ts src/toEdit/types.ts src/toTrigger/types.ts --out docs/api &&  npx typedoc src/toHave/types.ts src/toEdit/types.ts src/toTrigger/types.ts --theme markdown --out docs/api-md",
-    "clean": "rm -rf dist docs",
+    "all": "npm run clean && npm run prettier && npm run build && npm run test && npm tun docs",
+    "docs": "npx typedoc src/toHave/types.ts src/toEdit/types.ts src/toTrigger/types.ts --theme markdown --out api",
+    "clean": "rm -rf dist docs api",
     "prepare": "npm run build && npx shx rm -rf dist/**/__tests__"
   },
   "devDependencies": {
