--- a/misc-utils-of-mine-generic/tsconfig.json
+++ b/misc-utils-of-mine-generic/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es5",
     "module": "commonjs",
     "moduleResolution":"node",
     "lib": [
-      "es6"
+      "esnext"
     ],
     "outDir": "./dist",
     "rootDir": ".",
