--- a/misc-utils-of-mine-typescript/tsconfig.json
+++ b/misc-utils-of-mine-typescript/tsconfig.json
@@ -11,7 +11,8 @@
     "esModuleInterop": true,
     "strict": true,
     "declaration": true,
-    "skipLibCheck": true
+    // "skipLibCheck": true
   },
-  "include":["src", "spec"]
+  "include":["src", "spec"],
+  "exclude": ["../node_modules", "src/__tests__"]
 }
