--- a/misc-utils-of-mine-typescript/package.json
+++ b/misc-utils-of-mine-typescript/package.json
@@ -18,17 +18,19 @@
     "prepare": "npm run build && npx tsd-check-runtime --clean"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.11",    
-    "@types/node": "^10.5.2",
-    "jest": "^24.5.0",
-    "prettier": "^1.16.4",
-    "ts-jest": "^24.0.0",
-    "ts-node": "^7.0.1",
-    "typedoc": "^0.13.0",
-    "typedoc-plugin-markdown": "^1.1.27",
-    "typescript": "^3.4.1"
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.13.7",
+    "jest": "^24.7.1",
+    "prettier": "^1.17.0",
+    "ts-jest": "^24.0.2",
+    "ts-node": "^8.1.0",
+    "typedoc": "^0.14.2",
+    "typedoc-plugin-markdown": "^1.2.0",
+    "typescript": "^3.4.5",
+    "tsd-check-runtime": "file:../../tsd-check-runtime"
   },
-  "dependencies": {},
+  "dependencies": {
+  },
   "keywords": [
     "JavaScript",
     "TypeScript",
