--- a/misc-utils-of-mine-generic/tsconfig.json
+++ b/misc-utils-of-mine-generic/tsconfig.json
@@ -10,8 +10,8 @@
     "rootDir": ".",
     "esModuleInterop": true,
     "strict": true,
+    "sourceMap": true,
     "declaration": true,
-    "skipLibCheck": true
   },
   "include":["src", "spec"],
 }
