--- a/misc-utils-of-mine-generic/package.json
+++ b/misc-utils-of-mine-generic/package.json
@@ -6,15 +6,18 @@
   "typings": "dist/src/index.d.ts",
   "description": "Miscellaneous utilities for JavaScript/TypeScript that I often use",
   "scripts": {
-    "build": "npx tsc",
-    "build-watch": "npx tsc -w",
+    "build": "npm run clean && npx tsc",
+    "build-watch": "npm run clean && npx tsc -w",
     "prettier": "npx prettier  --write --arrow-parens avoid --parser typescript --use-tabs false --no-semi true --single-quote true --tab-width 2 --trailing-comma none --end-of-line lf --prose-wrap preserve --print-width 120  --jsx-bracket-same-line true \"src/**/*.ts*\"",
     "clean": "rm -rf dist tmp",
     "test": "npx jest --testPathIgnorePatterns /dist/",
-    "test-js": "npm run clean && npm run build && npx jest --testMatch \"**/__tests__/**/*.js\"",
+    "test-js": "npm run build && npx jest --testMatch \"**/__tests__/**/*.js\"",
     "docs": "npx typedoc 'src/index.ts' --theme markdown --out api",
     "test-watch": "npm test -- --watch",
-    "all": "npm run clean && npm run prettier && npm run build && npm run test-js && npm run test && npm run docs",
+    "format": "npx ts-refactor format \"src/**/*.ts*\" \"test/**/*.ts*\" ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk",
+    "organizeImports": "npx ts-refactor organizeImports \"src/**/*.ts*\" \"test/**/*.ts*\" \"test-browser/**/*.ts*\"  ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk ",
+    "lint": "npm run organizeImports && npm run format",
+    "all": "npm run clean && npm run prettier && npm run format &&  npm run build && npm run test-js && npm run test && npm run docs",
     "all-publish": "npm run all && git commit -a -m \"version patch\" && npm version patch && npm publish",
     "prepare": "npm run build"
   },
@@ -24,6 +27,7 @@
     "jest": "^24.8.0",
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
+    "ts-morph": "^2.3.0",
     "tsd-check": "^0.6.0",
     "typedoc": "^0.14.2",
     "typedoc-plugin-markdown": "^1.2.1",
