--- a/misc-utils-of-mine-generic/package.json
+++ b/misc-utils-of-mine-generic/package.json
@@ -22,20 +22,18 @@
     "prepare": "npm run build"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.15",
-    "@types/node": "^12.6.1",
+    "@types/jest": "^24.0.16",
+    "@types/node": "^12.6.8",
     "jest": "^24.8.0",
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
-    "ts-morph": "^3.1.0",
+    "ts-morph": "^3.1.3",
     "tsd-check": "^0.6.0",
-    "typedoc": "^0.14.2",
-    "typedoc-plugin-markdown": "^2.0.8",
+    "typedoc": "^0.15.0",
+    "typedoc-plugin-markdown": "^2.1.0",
     "typescript": "^3.5.3"
   },
-  "dependencies": {
-    "misc-utils-of-mine-typescript": "0.0.12"
-  },
+  "dependencies": {},
   "keywords": [
     "JavaScript",
     "TypeScript",
