--- a/misc-utils-of-mine-generic/package.json
+++ b/misc-utils-of-mine-generic/package.json
@@ -8,7 +8,6 @@
   "scripts": {
     "build": "npm run clean && npx tsc",
     "build-watch": "npm run clean && npx tsc -w",
-    "prettier": "npx prettier  --write --arrow-parens avoid --parser typescript --use-tabs false --no-semi true --single-quote true --tab-width 2 --trailing-comma none --end-of-line lf --prose-wrap preserve --print-width 120  --jsx-bracket-same-line true \"src/**/*.ts*\"",
     "clean": "rm -rf dist tmp",
     "test": "npm run build && npx jest --testPathIgnorePatterns /dist/",
     "test-js": "npm run build && npx jest --testMatch \"**/__tests__/**/*.js\"",
@@ -17,20 +16,20 @@
     "format": "npx ts-refactor format \"src/**/*.ts*\" \"test/**/*.ts*\" ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk",
     "organizeImports": "npx ts-refactor organizeImports \"src/**/*.ts*\" \"test/**/*.ts*\" \"test-browser/**/*.ts*\"  ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk ",
     "lint": "npm run organizeImports && npm run format",
-    "all": "npm run clean && npm run prettier && npm run format &&  npm run build && npm run test-js && npm run test && npm run docs",
+    "all": "npm run clean   && npm run lint &&  npm run build && npm run test-js && npm run test && npm run docs",
     "all-publish": "npm run all && git commit -a -m \"version patch\" && npm version patch && npm publish",
     "prepare": "npm run build"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.16",
-    "@types/node": "^12.6.8",
-    "jest": "^24.8.0",
-    "prettier": "^1.18.2",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.2",
+    "jest": "^24.9.0",
     "ts-jest": "^24.0.2",
     "ts-morph": "^3.1.3",
+    "ts-refactor": "0.0.9",
     "tsd-check": "^0.6.0",
     "typedoc": "^0.15.0",
-    "typedoc-plugin-markdown": "^2.1.0",
+    "typedoc-plugin-markdown": "^2.1.3",
     "typescript": "^3.5.3"
   },
   "dependencies": {},
